--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
   --dark-200: #151515;
   --gray-light: #c4c4c4;
   --light: #ffffff;
+  --border-width: 2px;
+  --radius: 8px;
 }
 
 * {
@@ -19,9 +21,6 @@
   text-decoration: none;
 }
 
-html {
-  scroll-behavior: smooth;
-}
 body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -76,12 +75,14 @@ p {
   font-size: 18px;
   font-weight: 500;
 }
-main {
-}
 .home {
+  padding-bottom: 100px;
 }
+
 .name {
-  margin: 140px;
+  margin-top: 140px;
+  margin-left: 140px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,10 +93,126 @@ main {
   color: var(--blue);
   font-weight: 600;
 
-line-height: 77px;
+  line-height: 77px;
 }
+
 .name h2 {
   color: var(--light);
   font-weight: 600;
   line-height: 29px;
+}
+.contact {
+  display: flex;
+  position: relative;
+  margin: 0 140px;
+}
+.github,
+.linkedin,
+.cloud,
+.mail {
+  position: relative;
+  text-decoration: none;
+  padding: 1rem 2rem;
+  color: var(--light);
+  font-size: 24px;
+  font-weight: medium;
+
+  border: 0;
+  border-radius: var(--radius);
+  z-index: 1;
+}
+.linkedin::before,
+.github::before,.cloud::before,
+.mail::before {
+  position: absolute;
+  content: "";
+
+  background-color: var(--dark);
+
+  width: calc(100% - calc(var(--border-width) * 2));
+  height: calc(100% - calc(var(--border-width) * 2));
+
+  top: var(--border-width);
+  left: var(--border-width);
+
+  border-radius: calc(var(--radius) - var(--border-width));
+
+  z-index: -1;
+}
+
+.linkedin {
+  background-image: var(--gradient-purple);
+  margin-left: 20px;
+}
+.github {
+  background-image: var(--gradient-pink);
+}
+.about-me {
+  width: 100%;
+  background-color: var(--dark-200);
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+.photo {
+  margin-top: 100px;
+  margin-left: 100px;
+
+}
+.photo-perfil {
+  width: 300px;
+  height: 370px;
+  border-radius: 10%;
+}
+.text {
+  text-align: justify;
+  width: 60%;
+  padding-top: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.text h2,
+h3 {
+  color: var(--light);
+  font-weight: 600;
+  line-height: 50px;
+}
+
+.text span {
+  color: var(--gray-light);
+  font-weight: 400;
+  line-height: 40px;
+  
+}
+.social {
+  display: flex;
+  text-align: right;
+position: relative;
+  margin-left: 50%;
+}
+.social li {
+  list-style: none;
+  display: inline;
+  text-align: center;
+  justify-content: center;
+  padding: 80px;
+}
+.social-instragam {
+  width: 22px;
+  height: 22px;
+}
+.contact-about{
+  display: flex;
+  position: relative;
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+.cloud{
+  background-image: var(--gradient-pink);
+  margin-left: 50%;
+}
+.mail{
+  background-image: var(--gradient-purple);
+  margin-left: 120px;
 }
