--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,63 +48,40 @@ h3 {
 p {
   font-size: 18px;
 }
-.header-menu {
+
+
+.home {
   display: flex;
   width: 100%;
-  height: 109px;
-  justify-content: space-between;
-  align-items: center;
-  padding: 42px 12px;
-  border: 2px solid var(--dark-200);
-}
-.logo {
-  position: relative;
-  width: 98px;
-  height: 29px;
-  left: 180px;
-}
-.menu li {
-  list-style: none;
-  display: inline;
-  padding: 42px;
-  text-align: center;
-  justify-content: center;
-}
-.menu a {
-  color: var(--gray-light);
-  font-size: 18px;
-  font-weight: 500;
-}
-.home {
-  padding-bottom: 180px;
-  
+  height: 100vh;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 .name {
-  margin-top: 140px;
+  margin-top: 200px;
   margin-left: 140px;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: left;
-  position: relative;
 }
 .name h1 {
   color: var(--pink);
   font-weight: 600;
 
-  line-height: 80px;
+  line-height: 100px;
 }
 
 .name h2 {
   color: var(--light);
   font-weight: 600;
   line-height: 29px;
+  padding-bottom: 20px;
 }
 .contact {
   display: flex;
-  position: relative;
   margin: 0 140px;
 }
 .github,
@@ -153,8 +130,8 @@ p {
 }
 .about-me {
   width: 100%;
+  height: 100vh;
   background-color: var(--dark-200);
-  padding-bottom: 80px;
 }
 .container {
   display: flex;
@@ -223,6 +200,7 @@ h3 {
 .projects {
   display: flex;
   flex-wrap: wrap;
+
   width: 100%;
 }
 .project-01,
@@ -267,7 +245,7 @@ h3 {
 .project-01 h3,
 .project-02 h3,
 .project-03 h3,
-.project-04 h3{
+.project-04 h3 {
   color: var(--pink);
 }
 .img-project {
@@ -286,16 +264,132 @@ h3 {
   background-image: var(--gradient-purple);
   margin-left: 20px;
 }
-footer{
+footer {
   display: flex;
+
   justify-content: space-around;
   width: 100%;
-  height: 109px;
-  padding: 42px 12px;
   border: 2px solid var(--dark-200);
-
 }
-footer h3{
+footer h3 {
   text-align: center;
   justify-content: center;
+}
+header-menu {
+  background-color: var(--dark);
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 12px;
+  border: 2px solid var(--dark-200);
+  z-index: 3;
+}
+.logo {
+  position: relative;
+  width: 98px;
+  height: 29px;
+  left: 180px;
+}
+.menu li {
+  list-style: none;
+  display: inline;
+  padding: 42px;
+  text-align: center;
+  justify-content: center;
+  position: relative;
+}
+
+
+   
+.menu a {
+  color: var(--gray-light);
+  font-size: 18px;
+  font-weight: 500;
+ 
+}
+.item-menu{
+
+}
+@media (min-width: 991px) {
+  .menu {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .list-menu {
+    display: flex!important;
+    justify-content: space-between;
+    width: 100%;
+    background: #fff;
+    box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
+  }
+
+  .item-menu {
+    flex: auto;
+  }
+  .item-menu .link-menu {
+    padding: 15px;
+    color: #555;
+    display: block;
+    transition: .4s;
+    cursor: pointer;
+    text-align: center
+  }
+
+  .item-menu .link-menu:hover {
+    background: #545bc4;
+    color: #fff;
+  }
+  
+  .navegacao-mobile {
+    display: none!important;
+  }
+ }
+
+.navegacao-mobile {
+  background: #ccc;
+  padding: 10px;
+  display: block;
+  width: 53px;
+  cursor: pointer;
+}
+.linha-menu {
+  width: 25px;
+  height: 3px;
+  border-radius: 5px;
+  background: #555;
+  margin: 4px;
+  display: block;
+}
+.input-menu-all {
+  display: none!important;
+}
+.list-menu {
+  display: none;
+   width: 100%;
+   background: #fff;
+   box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
+}
+.item-menu {
+    flex: auto;
+  }
+  .item-menu .link-menu {
+    padding: 15px;
+    color: #555;
+    display: block;
+    transition: .4s;
+    cursor: pointer;
+    text-align: center
+  }
+.input-menu-all:checked ~ .list-menu {
+       display: block;
+      
+}
+.input-menu-all:checked ~ .list-menu .link-menu  {
+  text-align: left;
 }
