--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,16 @@ h3 {
 p {
   font-size: 18px;
 }
-
+header {
+  min-height: 60px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  border-bottom: 1px solid #ccc;
+  background: #ececec;
+  z-index: 2;
+}
 
 .home {
   display: flex;
@@ -140,12 +149,12 @@ p {
 .photo {
   margin-top: 100px;
   margin-left: 100px;
-  border-left: 3px solid var(--pink);
 }
 .photo-perfil {
   width: 300px;
   height: 370px;
   border-radius: 3%;
+  border-left: 3px solid var(--pink);
 }
 .text {
   text-align: justify;
@@ -275,7 +284,7 @@ footer h3 {
   text-align: center;
   justify-content: center;
 }
-header-menu {
+.header-menu {
   background-color: var(--dark);
   position: fixed;
   display: flex;
@@ -302,94 +311,105 @@ header-menu {
   position: relative;
 }
 
-
-   
 .menu a {
   color: var(--gray-light);
   font-size: 18px;
   font-weight: 500;
- 
 }
-.item-menu{
 
+ul.topnav li a:hover {
+  color: var(--pink);
 }
-@media (min-width: 991px) {
-  .menu {
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-    display: block;
-  }
 
-  .list-menu {
-    display: flex!important;
-    justify-content: space-between;
-    width: 100%;
-    background: #fff;
-    box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
-  }
-
-  .item-menu {
-    flex: auto;
-  }
-  .item-menu .link-menu {
-    padding: 15px;
-    color: #555;
-    display: block;
-    transition: .4s;
-    cursor: pointer;
-    text-align: center
-  }
-
-  .item-menu .link-menu:hover {
-    background: #545bc4;
-    color: #fff;
-  }
-  
-  .navegacao-mobile {
-    display: none!important;
-  }
- }
-
-.navegacao-mobile {
-  background: #ccc;
-  padding: 10px;
-  display: block;
-  width: 53px;
-  cursor: pointer;
-}
-.linha-menu {
-  width: 25px;
-  height: 3px;
-  border-radius: 5px;
-  background: #555;
-  margin: 4px;
-  display: block;
-}
-.input-menu-all {
-  display: none!important;
-}
-.list-menu {
+ul.topnav li.icon {
   display: none;
-   width: 100%;
-   background: #fff;
-   box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
+  padding-top: 0px;
 }
-.item-menu {
-    flex: auto;
+
+@media screen and (max-width: 800px) {
+  ul.topnav li {
+    display: none;
   }
-  .item-menu .link-menu {
-    padding: 15px;
-    color: #555;
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  ul.topnav.responsive {
+    position: relative;
+    background: rgba(0, 0, 0, 0.75); /*Fundo cinza*/
+    height: 400px;
+    line-height: 5px;
+    width: 500px;
+    padding-top: 200px;
+  }
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: 200px;
+  }
+  ul.topnav.responsive li {
+    text-align: center;
+    float: none;
+    padding: 0;
+    display: inline;
+  }
+  ul.topnav.responsive li a {
     display: block;
-    transition: .4s;
-    cursor: pointer;
-    text-align: center
+    padding: 0;
+    text-align: left;
+    line-height: 30px;
+    text-align: center;
+    padding: 20px;
   }
-.input-menu-all:checked ~ .list-menu {
-       display: block;
-      
 }
-.input-menu-all:checked ~ .list-menu .link-menu  {
-  text-align: left;
+@media (max-width: 800px) {
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  span {
+    font-size: 12px;
+    padding-bottom: 20px;
+  }
+  .contact a {
+    font-size: 20px;
+  }
+  .about-me {
+    width: 100%;
+    height: 700px;
+    padding-bottom: 200px;
+  }
+  .photo-perfil {
+    width: 200px;
+    height: 270px;
+    border-left: 3px solid var(--pink);
+  }
+  .photo {
+    margin-top: 100px;
+    margin-left: 50px;
+    margin-bottom: 0px;
+  }
+  .social img {
+    width: 12px;
+    height: 12px;
+  }
+  .social li {
+    padding: 20px;
+  }
+  .contact-about a {
+    font-size: 10px;
+  }
+  .contact-about img {
+    width: 10px;
+    height: 10px;
+  }
 }
